--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -36,6 +36,35 @@
 
   </head>
   <body>
+  
+  
+    <lightonly>
+      <div id="headcolor">
+        <div id="colorheadspacer"></div>
+      </div>
+    </lightonly>
+
+
+    <script src="./assets/js/back-to-top.js"></script>
+    <script>addBackToTop({
+        backgroundColor: '#fff',
+        innerHTML: 'Back to Top',
+        textColor: '#333'
+      })
+    </script><div id="back-to-top" class="hidden">Back to Top</div>
+    
+    <style>
+        #back-to-top {
+          border: 1px solid #ccc;
+          border-radius: 0;
+          font-size: 15px;
+          width: 100px;
+          text-align: center;
+          line-height: 30px;
+          height: 30px;
+        }
+    </style>
+  
     <div class="wrapper">
       <header>
         
@@ -99,14 +128,15 @@
 
       <br>
 
-      {% if site.enable_footnote %}
-      <p><small>Powered by Jekyll and <a href="https://github.com/yaoyao-liu/minimal-light" target="_blank" rel="noopener">Minimal Light</a> theme.</small></p>
-      {% endif %}
+ 
 
       </section>
+      
       <footer>
-        
+        <font color=#002D72>All rights reserved & Last update on Jun, 2024</font>      
       </footer>
+      
+      
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
