--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -118,6 +118,11 @@
           <i class="fab fa-twitter"></i>
         </a>
         {% endif %}
+        {% if site.zhihu %}
+        <a style="margin: 0 0 0 0" href="{{ site.zhihu }}">
+          <i class="fab fa-zhihu"></i>
+        </a>
+        {% endif %}
         </div>
         <br>
 
