--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,500;0,600;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+
+body {
+  background-color: #fff;
+  padding:0px;
+  font: 16.0px/1.5 Crimson Pro, serif; 
+  color:#595959;
+  font-weight:400;
+  margin:0
+}
+
 .pub-row {
   display: flex; 
   align-items: center;}
@@ -7,7 +19,7 @@
   height:2.4rem;
   width:2.4rem;
   background-color:transparent;
-  color:#043361!important;
+  color:#002D72 !important;
   border-radius:100%;
   text-align:center;
   font-size:1.15rem;
@@ -16,9 +28,8 @@
 
 @media (prefers-color-scheme: dark) { .social-icons a {color: #3eb7f0 !important; }}
 
-.social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:white;
-    color:black;
-    transform: scale(1.2)}
+.social-icons a:last-child{margin-right:0}
+.social-icons a:hover{background-color:white; color:black; transform: scale(1.2)}
     /*
     .social-icons a:after {
         content: '';
@@ -35,9 +46,7 @@
       }
      */
 
-@media (prefers-color-scheme: dark) {.social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:#20212b;
-    color:black;
-    transform: scale(1.2)} 
+@media (prefers-color-scheme: dark) {.social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:#20212b; color:black; transform: scale(1.2)} 
     /*
     .social-icons a:after {
         content: '';
@@ -137,10 +146,11 @@ email {
 
 .icon-button .icon-linkedin{
   color:#0077B5}
+  
  .icon-button .icon-zhihu{
   color:#002D72}
 
-.icon-button:hover .icon-twitter,.icon-button:hover .icon-facebook,.icon-button:hover .icon-github,.icon-button:hover .icon-linkedin{color:white}, .icon-button:hover .icon-zhihu
+.icon-button:hover .icon-twitter,.icon-button:hover .icon-facebook,.icon-button:hover .icon-github,.icon-button:hover .icon-linkedin{color:white},.icon-button:hover .icon-zhihu
 
 autocolor{
   color:#595959;
@@ -187,15 +197,14 @@ papertitle {
 
 }
 
-
-  .image {
+ .image {
     border-radius: 0.35em;
     border: 0;
     display: inline-block;
     position: relative;
   }
 
-    .image:before {
+.image:before {
       -moz-transition: opacity 0.2s ease-in-out;
       -webkit-transition: opacity 0.2s ease-in-out;
       -ms-transition: opacity 0.2s ease-in-out;
@@ -209,44 +218,30 @@ papertitle {
       position: absolute;
       top: 0;
       width: 100%;
-    }
+}
 
-    .image.avatar {
-      border-radius: 100%;
-    }
+.image.avatar { border-radius: 100%; }
 
-      .image.avatar:before {
-        display: none;
-      }
+.image.avatar:before { display: none; }
 
-      .image.avatar img {
-        border-radius: 100%;
-        width: 45%;
-        padding: 20px;
-        // border: 1px solid #ddd;
-        // padding: 3px;
-        // box-shadow: 0 -1px 5px 1px rgba(200, 200, 200, 0.3);
-      }
+.image.avatar img { border-radius: 100%; width: 45%; padding: 20px; }
 
-    #header .image.avatar {
-      margin: 0 0 1em 0;
-      width: 8.00em;
-    }
+#header .image.avatar { margin: 0 0 1em 0; width: 8.00em; }
 
 h3, h4, h5, h6 {
   font-weight: 600;
-  color:#043361;
+  color:#002D72;
   margin:0 0 20px;
 }
 
 h1 {
   font-weight: 500;
-  color:#043361;
+  color:#002D72;
   margin:0 0 20px;
 }
 
 h2 {
-  color:#043361;
+  color:#002D72;
   font-weight: 500;
   margin:2px 0px 15px;
   font-size: 157%;
@@ -365,7 +360,7 @@ header {
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
-  padding-top:4.0em;
+  padding-top:5.5em;
   text-align:center
 }
 
