--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -19,7 +19,8 @@
     <script src="./assets/js/favicon-switcher.js" type="application/javascript"></script>
 
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin=anonymous>
-    <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin=anonymous>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k5uK5Z5b8YWlz+eQ/3fYS6GH37dZp/Rx2M+ZH7oI4JfPj/a8+8Zo8X/NrkwJS8+kY=" crossorigin="anonymous">
+
 
     {% if site.font == "Sans Serif" %}
     <link rel="stylesheet" href="./assets/css/font_sans_serif.css">
@@ -118,6 +119,7 @@
           <i class="fab fa-twitter"></i>
         </a>
         {% endif %}
+        
         {% if site.zhihu %}
         <a style="margin: 0 0 0 0" href="{{ site.zhihu }}">
           <i class="fab fa-zhihu"></i>
@@ -140,7 +142,6 @@
       <footer>
         <font color=#002D72>All rights reserved & Last update on Jun, 2024</font>      
       </footer>
-      
       
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
