--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -1,15 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,500;0,600;1,500;1,600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
-
-body {
-  background-color: #fff;
-  padding:0px;
-  font: 16.0px/1.5 Crimson Pro, serif; 
-  color:#595959;
-  font-weight:400;
-  margin:0
-}
-
 .pub-row {
   display: flex; 
   align-items: center;}
@@ -110,7 +98,7 @@ body {
   background-color:#0077B5}
 
 .github span{
-  background-color:#000}
+  background-color:#002D72}
  
 .zhihu span{
  background-color:#002D72}
@@ -142,7 +130,7 @@ email {
   color:#4286f4}
 
 .icon-button .icon-github{
-  color:#000;}
+  color:#4286f4}
 
 .icon-button .icon-linkedin{
   color:#0077B5}
@@ -150,7 +138,7 @@ email {
  .icon-button .icon-zhihu{
   color:#002D72}
 
-.icon-button:hover .icon-twitter,.icon-button:hover .icon-facebook,.icon-button:hover .icon-github,.icon-button:hover .icon-linkedin{color:white},.icon-button:hover .icon-zhihu
+.icon-button:hover .icon-twitter,.icon-button:hover .icon-facebook,.icon-button:hover .icon-github,.icon-button:hover .icon-zhihu,.icon-button:hover .icon-linkedin{color:white}
 
 autocolor{
   color:#595959;
