--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -76,7 +76,7 @@
         <h1>{{ site.title }}</h1>
         
          {% if site.titlecn %}
-        <position style="font-size:1.2rem; color:#036; font-family:serif;"><b>{{ site.titlecn }}</b></position>
+        <position style="font-size:1.5rem; color:#036; font-family:serif;"><b>{{ site.titlecn }}</b></position>
         <br>
         {% endif %}
 
@@ -139,26 +139,19 @@
       {{ content }}
 
       <br>
-
- 
-
+      
+      
+      {% if site.clustrmaps_id %}
+      <div style="width:600px; pointer-events: none;">
+      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=f2eada&w=a&t=n&d={{ site.clustrmaps_id }}&co=002d72&ct=3c3645&cmo=7c8577&cmn=563624'></script>
+      </div>
+      {% endif %}
+      
       </section>
       
       <footer>
         <font color=#002D72>All rights reserved & Last update on Jun, 2024</font>      
       </footer>
-      
-    </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
+      <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   </body>
 </html>
