--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -76,7 +76,7 @@
         <h1>{{ site.title }}</h1>
         
          {% if site.titlecn %}
-        <position style="font-size:1.5rem; color:#036; font-family:serif;"><b>{{ site.titlecn }}</b></position>
+        <position style="font-size:1.5rem; color:#3EB7F0; font-family:serif;"><b>{{ site.titlecn }}</b></position>
         <br>
         {% endif %}
 
@@ -154,7 +154,7 @@
       </section>
       
       <footer>
-        <font color=#002D72>All rights reserved & Last update on Jun, 2024</font>      
+        <font color=#3EB7F0>All rights reserved & Last update on Jun, 2024</font>      
       </footer>
       </div>
       
