--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -75,8 +75,8 @@
 
         <h1>{{ site.title }}</h1>
         
-         {% if site.titlecn %}
-        <position style="font-size:1.5rem; color:#3EB7F0; font-family:serif;"><b>{{ site.titlecn }}</b></position>
+        {% if site.titlecn %}
+        <titlecn><position style="font-size:1.5rem; font-family:serif;"><b>{{ site.titlecn }}</b></position></titlecn>
         <br>
         {% endif %}
 
@@ -154,7 +154,7 @@
       </section>
       
       <footer>
-        <font color=#3EB7F0>All rights reserved & Last update on Jun, 2024</font>      
+      All rights reserved & Last update on Jun, 2024     
       </footer>
       </div>
       
