--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -143,7 +143,7 @@
       
       {% if site.clustrmaps_id %}
       <div style="width:600px; pointer-events: none;">
-      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=f2eada&w=a&t=n&d={{ site.clustrmaps_id }}&co=002d72&ct=3c3645&cmo=7c8577&cmn=563624'></script>
+      <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=f2eada&w=a&t=n&d={{ site.clustrmaps_id }}&co=002d72&ct=2a4c65"></script>
       </div>
       {% endif %}
       
